-- Almost all changes listed herein are new as of 2016. --

2016-07-28  Bob Weiner  <rsw@gnu.org>

* hyperbole.el: Updated the header fields to better match GNU standards for use
    by the Lisp maintainer package, lisp-mnt.el.

2016-07-27  Bob Weiner  <rsw@gnu.org>

* hactypes.el (exec-shell-cmd): Replaced call to old function 'show-output-from-shell'
    with 'comint-show-output'.  This fixed a failure when this action type is used.

* HY-ANNOUNCE (About):
  README (Files): Added pointers to Hyperbole screenshot files.

*  man/im/menu-hyperbole2.pdf: Removed this unneeded file.

* HY-ANNOUNCE: Updated first section and used in sending 6.0.1 release announcements.
    Added items from HY-NEWS for 6.0.1 that were unintentially left out of this file.

* hload-path.el (hyperb:dir): If the Emacs Package Manager has already added this
    to load-path without a trailing directory separator, don't add it with one.

==============================================================================
V6.0.2 changes ^^^^:
==============================================================================

2016-07-26  Mats Lidell  <matsl@gnu.org>

* hypb.el (hypb:rgrep-command): Removed -Z option.
  Different meaning on OS X and GNU/Linux.

2016-07-26  Bob Weiner  <rsw@gnu.org>

* hypb.el (hypb:rgrep-command): Removed -S option not supported by GNU/Linux.

* hyperbole.el: Added Date: header with release date and updated date in
    man/version.texi used in hyperbole.texi.

* README.md: Added this, a markdown formatted introduction combining README,
    INSTALL and HY-ABOUT. 

2016-07-26  Mats Lidell  <matsl@gnu.org>

* MANIFEST: Removed hyperbole-readme.txt.

2016-07-25  Bob Weiner  <rsw@gnu.org>

* README: Renamed this file from HY-README.  Moved installation and invocation
    instructions to "INSTALL" file.  These changes were to eliminate release
    problems with INSTALL and README being symbolic links.

* hmouse-tag.el (smart-tags-display): Added with-no-warnings around